# autonomous-car-ros-lidar

./: FAQ.md  README.md  RUNNING_FourWd.md  tmux.sh
Firmwares/FourWheelCarConfigurations(VESC)/: README.md
Firmwares/SixWheelCar_Firmware/: README.md
Firmwares/arduino/: README.md
JetsonPower/jetsonTX2Power/: jetson_tx2_power.cpp  jetson_tx2_power.hh  jetson_tx2_power_main.cpp
JetsonPower/linux-fake-battery-module/: Makefile  README.md  change_battery_volt.c  fake_battery.c
buildLibrealsense2TX/: README.md  buildPatchedKernel.sh  installLibrealsense.sh  patchApplication.sh
devel/: .catkin  local_setup.sh  setup.sh
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
linux_env/: README.md
morse/: Readme.md
morse/fourwd/: default.py
scripts/: remoteClientNetwork.sh
src/ackermann_rc/: CMakeLists.txt  README.md  package.xml
src/bear_car_launch/: CMakeLists.txt  README.md
src/low_level_speed_controller/: CMakeLists.txt  README.md
src/low_level_steering_controller/: CMakeLists.txt  package.xml
src/odometry_agent/: CMakeLists.txt  README.md  package.xml
src/pose_follower/: README.md  package.xml
src/racing_control/: CMakeLists.txt  package.xml
src/racing_control/include/racing_control/: RacingControl.hpp
src/racing_control/launch/: racing_control.launch
src/racing_control/src/: RacingControl.cpp
src/track_detection/: CMakeLists.txt  package.xml
src/track_detection/include/track_detection/: CellState.hpp  ConeKernel.hpp  Map.hpp  Point.hpp  TrackDetector.hpp
src/track_detection/launch/: track_detection.launch
src/track_detection/msg/: TrackMsg.msg
src/track_detection/src/: ConeKernel.cpp  Map.cpp  TrackDetector.cpp
(+524 files in other folders)
